Fix calendar modal checkbox text wrapping

--- a/themes/ModernTheme2026/scss/humhub/_calendar.scss
+++ b/themes/ModernTheme2026/scss/humhub/_calendar.scss
@@ -132,11 +132,9 @@
       }
 
       > label {
-        display: grid;
-        grid-template-columns: 18px minmax(0, 1fr);
-        align-items: start;
-        column-gap: var(--space-2);
-        row-gap: var(--space-1);
+        display: flex;
+        align-items: flex-start;
+        gap: var(--space-2);
         width: 100%;
         min-height: 0;
         margin: 0;
@@ -144,10 +142,11 @@
         font-weight: $font-weight-medium;
         color: var(--color-text-primary);
         line-height: 1.45;
+        white-space: normal;
       }
 
       > label > input[type="checkbox"] {
-        grid-column: 1;
+        flex: 0 0 18px;
         float: none;
         position: static;
         width: 18px;
